packages/itwinui-css/src/tabs/classes.scss
// Copyright (c) Bentley Systems, Incorporated. All rights reserved.
// See LICENSE.md in the project root for license terms and full copyright notice.
@import './index';

.iui-tabs-wrapper {
  display: flex;
  position: relative;

  &.iui-horizontal {
    @include iui-tabs-horizontal;

    display: grid;
    grid-template-areas: 'tabs tabs-actions' 'tabs-content tabs-content';
    grid-template-columns: auto fit-content(1px);
    column-gap: var(--iui-gap-between-inputs);

    .iui-tabs-actions {
      grid-area: tabs-actions;
      display: flex;
      justify-content: flex-end;
      align-items: center;
      column-gap: var(--iui-size-xs);
    }

    .iui-tabs-content {
      grid-area: tabs-content;
    }
  }

  &.iui-vertical {
    @include iui-tabs-vertical;

    display: grid;
    grid-template-areas: 'tabs tabs-content' 'tabs-actions tabs-content';
    grid-template-rows: fit-content(1px) auto;
    row-gap: var(--iui-gap-between-inputs);

    .iui-tabs-actions {
      grid-area: tabs-actions;
      display: flex;
      flex-direction: column;
      justify-content: flex-end;
      align-items: center;
      row-gap: var(--iui-size-xs);
    }

    .iui-tabs-content {
      grid-area: tabs-content;
    }
  }
}

.iui-tabs {
  @include iui-tabs;

  &.iui-default {
    @include iui-tabs-default;
  }

  &.iui-borderless {
    @include iui-tabs-borderless;
  }

  &.iui-pill {
    @include iui-tabs-pill;
  }

  &.iui-animated {
    @include iui-tab-animated;
  }

  &.iui-not-animated {
    @include iui-tab-not-animated;
  }
}

.iui-tab-label {
  @include iui-tab-label;
}

